manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kapetanios
  namespace: default
  labels:
    app: kapetanios
spec:
  selector:
    matchLabels:
      app: kapetanios
  template:
    metadata:
      labels:
        app: kapetanios
    spec:
      containers:
# TODO: update maxSurge value to keep max one instance
# TODO: update the image name in readme
        - image: quay.io/klovercloud/kapetanios:latest
          imagePullPolicy: Always
          name: kapetanios
          ports:
            - containerPort: 80
              name: kapetanios
            - containerPort: 50051
              name: kapetanios-grpc
          livenessProbe:
            failureThreshold: 10
            httpGet:
              host: 127.0.0.1
#              httpHeaders:
#                - name: brief
#                  value: "true"
              path: /livez
              port: 80
              scheme: HTTP
            periodSeconds: 300
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 3
            httpGet:
              host: 127.0.0.1
#              httpHeaders:
#                - name: brief
#                  value: "true"
              path: /readyz
              port: 80
              scheme: HTTP
            periodSeconds: 300
            successThreshold: 1
            timeoutSeconds: 15
      terminationGracePeriodSeconds: 60
      schedulerName: default-scheduler
#      TODO: serviceAccount
      serviceAccountName: kapetanios
