manifests/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kapetanios-grpc
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  labels:
    app: kapetanios
spec:
  ingressClassName: nginx
  rules:
    - host: kapetanios-grpc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kapetanios
                port:
                  number: 50051
