manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kapetanios
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: kapetanios.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kapetanios
                port:
                  number: 80
